@@ -1,4 +1,5 @@
 2007-02-19 David Moore http://davemoore.org/
+	* SVN 384: Added missing function dc1394_video_get_iso_channel().
 	* SVN 383: Add new function dc1394_read_cycle_timer() to get the
 	  value of the bus's cycle timer synchronized with the system
 	  time.  Implemented for both Mac OS X and Linux.
